--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </nav>
     </header><br><br>
     <footer>
-    <p>Hier is een samenvatting vat het verhaal van de dierentuin<a href="https://www.diergaardeblijdorp.nl/160jaar/stukje-geschiedenis/">Diergaarde Blijdorp</a>
+    <p>Hier is een samenvatting van het verhaal van de dierentuin. (bron <a href="https://www.diergaardeblijdorp.nl/160jaar/stukje-geschiedenis/">Diergaarde Blijdorp</a>)
     <blockquote cite="https://www.diergaardeblijdorp.nl/160jaar/stukje-geschiedenis/">
         <b>Van spoortuin tot toonaangevend instituut...</b><br><br>
         Diergaarde Blijdorp is begonnen als een hobby van twee spoorwegbeambten. Zij huurden in 1856 een spoortuintje in
